syntax = "proto3";

package environment.v1;

option go_package = "dev-tools-services/gen/environment/v1;environmentv1";


service EnvironmentService {
  rpc CreateEnvironment(CreateEnvironmentRequest) returns (CreateEnvironmentResponse);
  rpc GetEnvironment(GetEnvironmentRequest) returns (GetEnvironmentResponse);
  rpc GetEnvironments(GetEnvironmentsRequest) returns (GetEnvironmentsResponse);
  rpc UpdateEnvironment(UpdateEnvironmentRequest) returns (UpdateEnvironmentResponse);
  rpc DeleteEnvironment(DeleteEnvironmentRequest) returns (DeleteEnvironmentResponse);
}

enum EnvType {
  ENV_TYPE_UNSPECIFIED = 0;
  ENV_TYPE_GLOBAL = 1;
  ENV_TYPE_NORMAL = 2;
}

message Environment {
  string id = 1;
  string name = 2;
  EnvType type = 3;
  string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateEnvironmentRequest {
  Environment environment = 1;
}

message CreateEnvironmentResponse {
  string id = 1;
}

message GetEnvironmentRequest {
  string id = 1;
}

message GetEnvironmentResponse {
  Environment environment = 1;
}

message GetEnvironmentsRequest {
  string workspace_id = 1;
}

message GetEnvironmentsResponse {
  repeated Environment environments = 1;
}

message UpdateEnvironmentRequest {
  Environment environment = 1;
}

message UpdateEnvironmentResponse {
}

message DeleteEnvironmentRequest {
  string id = 1;
}

message DeleteEnvironmentResponse {
}
